Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -402,7 +402,6 @@ nav {
         ul {
             display: table;
             margin: 0;
-            text-align: left;
             padding: 0;
             width: 100%;
             @media @tablet {
@@ -471,7 +470,6 @@ nav {
                     color: fade(@color-swatch7, 40%);
                     line-height: @font-swatch6-line-height;
                     letter-spacing: @font-swatch6-letter-spacing;
-                    text-align: left;
                     &:hover {
                         color: @color-swatch7;
                     }
@@ -510,7 +508,6 @@ nav {
                         line-height: @font-swatch6-line-height;
                         letter-spacing: @font-swatch6-letter-spacing;
                         position: relative;
-                        text-align: left;
                         &:hover {
                             color: @color-swatch7;
                             text-decoration: none;
